增加pom支持